# pylgsoundbar

./: .flake8  .pylintrc  README.md  pyproject.toml  pytest.ini  run_pipeline.sh
.github/workflows/: ci.yml  publish.yml
src/lgsoundbar/: __init__.py  client.py  communication.py  enums.py  models.py
tests/: __init__.py
tests/unit/: __init__.py  test_communication.py
